CHANGES IN DEVELOPMENT (0.99.16)
--------------------------

  o Improve grouping arguments for UMI-4C objects: now creates a new UMI-4C
    object that can be accessed using `groupsUMI4C(umi4c)$condition`. This allows
    retaining replicate information in the main UMI4C object while allowing 
    plotting grouped trends stored in `groupsUMI4C()`.

CHANGES IN VERSION 0.99.15
--------------------------

  o Fixed duplicated read number in read id (.singlePrepUMI4C) (see issue #5).
  o Changed example download urls to gattaca server.

CHANGES IN VERSION 0.99.14
--------------------------

  o Fixed bug where adaptive smoothed trend was normalized twice (see issue #4).

CHANGES IN VERSION 0.99.11
--------------------------

  o Uploaded example datasets urls in `downloadUMI4CexampleData()` to a more
    stable and permanent location (figshare.com).

CHANGES IN VERSION 0.99.10
--------------------------

  o Avoid running long and redundant examples, already tested in the vignette to
    avoid TIMEOUT build error.

CHANGES IN VERSION 0.99.9
--------------------------

  o Add data object `ex_ciita_umi4c` to use in examples and reduce check running
    times.

CHANGES IN VERSION 0.99.8
--------------------------

  o Update package vignette to clarify the origin of the different sample files
    used to exemplify a workflow using the UMI4Cats package.

CHANGES IN VERSION 0.99.7
--------------------------

  o Added unit tests using `testthat`.
  o Use BiocFileCache to download sample files.
  o Use tempdir() for demo purposes both in vignette and examples.
  o Added inst\scripts to describe how the sample data was generated.
  o Other minor changes to comply with Bioconductor review
    (see https://github.com/Pasquali-lab/UMI4Cats/issues/2#issue-637249954)

CHANGES IN VERSION 0.99.6
--------------------------

  o Delete downloaded and intermediate folders when building vignette.
  o Added `UMI4Cats_index` to .Rbuildignore to prevent ERRORs and