@@ -53,6 +53,8 @@ import(org.Hs.eg.db)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(stats,as.formula)
+importFrom(stats,formula)
+importFrom(stats,predict)
 importFrom(stats,sd)
 importFrom(utils,download.file)
 importFrom(utils,untar)
