@@ -44,7 +44,7 @@
 #' enh <- GRanges(c("chr16:10925006-10928900", "chr16:11102721-11103700"))
 #' umi_dif <- fisherUMI4C(ex_ciita_umi4c, query_regions = enh, 
 #'                        filter_low = 20, resize = 5e3)
-#' results(umi_dif)                        
+#' resultsUMI4C(umi_dif)                        
 #' @export
 fisherUMI4C <- function(umi4c,
     grouping = "condition",
@@ -178,79 +178,4 @@ fisherUMI4C <- function(umi4c,
     )
 
     return(umi4c_ori)
-}
-
-#' Differential UMI4C contacts using DESeq2 Wald Test
-#'
-#' @param umi4c UMI4C object as generated by \code{makeUMI4C} or the
-#' \code{UMI4C} constructor.
-#' @param design A \code{formula} or \code{matrix}. The formula expresses how
-#' the counts for each fragment end depend on the variables in \code{colData}.
-#' See  \code{\link[DESeq2]{DESeqDataSet}}
-#' @param normalized Logical indicating if the function shoult return normalized
-#'  or raw UMI counts.
-#' @param padj_method The method to use for adjusting p-values, see
-#' \code{\link[stats]{p.adjust}}
-#' @param query_regions \code{GRanges} object or \code{data.frame} containing
-#' the coordinates of the genomic regions you want to use to perform the
-#' analysis in specific genomic intervals.
-#' @param padj_threshold Numeric indicating the adjusted p-value threshold to
-#' use to define significant differential contacts.
-#' @param ... Other arguments to be passed to \code{\link[DESeq2]{DESeq}}
-#' function.
-#' @return Differential results using DESeq2.
-#' @import GenomicRanges
-deseq2UMI4C <- function(umi4c,
-    design = ~condition,
-    normalized = TRUE,
-    padj_method = "fdr",
-    query_regions = NULL,
-    padj_threshold = 0.05,
-    ...) {
-    if (is(query_regions, "data.frame")) query_regions <- regioneR::toGRanges(query_regions)
-
-    dds <- DESeq2::DESeqDataSetFromMatrix(
-        countData = assays(umi4c)$umis,
-        colData = colData(umi4c),
-        rowRanges = rowRanges(umi4c),
-        design = design
-    )
-
-    if (!is.null(query_regions)) {
-        dds <- subsetByOverlaps(dds, query_regions)
-        query_regions <- rowRanges(dds)
-        colnames(mcols(query_regions))[1] <- "id"
-    } else {
-        query_regions <- rowRanges(umi4c)
-        colnames(mcols(query_regions))[1] <- "id"
-    }
-
-    dds <- DESeq2::DESeq(
-        dds,
-        ...
-    )
-
-    res <- DESeq2::results(dds,
-        pAdjustMethod = padj_method
-    )
-
-    res <- data.frame(res[, c(5, 2, 6)])
-    res$query_id <- rownames(res)
-    res$sign <- FALSE
-    res$sign[res$padj <= padj_threshold] <- TRUE
-
-    counts <- as.data.frame(counts(dds, normalized = normalized))
-    counts$query_id <- rownames(counts)
-    counts <- counts[, c(ncol(counts), seq_len(ncol(counts) - 1))]
-
-    umi4c@results <- S4Vectors::SimpleList(
-        test = "DESeq2 Test based on the Negative Binomial distribution",
-        ref = DESeq2::resultsNames(dds)[2],
-        padj_threshold = padj_threshold,
-        results = res[, c(4, 1, 2, 3, 5)],
-        query = query_regions,
-        counts = counts
-    )
-
-    return(umi4c)
 }
