@@ -74,5 +74,5 @@ ex_ciita_umi4c <- addGrouping(ex_ciita_umi4c, grouping="condition")
 enh <- GRanges(c("chr16:10925006-10928900", "chr16:11102721-11103700"))
 umi_dif <- fisherUMI4C(ex_ciita_umi4c, query_regions = enh, 
                        filter_low = 20, resize = 5e3)
-results(umi_dif)                        
+resultsUMI4C(umi_dif)                        
 }
